--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-mongodb": "^1.0.3",
+    "@node-rs/argon2": "^1.8.0",
+    "@node-rs/bcrypt": "^1.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucia": "^3.1.1",
     "lucide-react": "^0.365.0",
+    "mongoose": "^8.3.1",
     "next": "14.1.4",
+    "oslo": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2"
